# rust_study

./: .gitignore  README.md
cargo/: cargo.md
cargo/actix_web/hello-world/: Cargo.toml
cargo/actix_web/hello-world/src/: main.rs
cargo/hellorust/: Cargo.toml
cargo/hellorust/src/: main.rs
cratelib/: Cargo.toml
cratelib/examples/: error.rs  flag.rs  http.rs  http_fail.rs  json.rs  logger_test.rs  template.rs  warp.rs
cratelib/src/: main.rs
cratelib/templates/: hello.rs.html
doc/: README.md
fist_rust/: hello_collection.rs  hello_concurrent.rs  hello_enum.rs  hello_error.rs  hello_fn.rs  hello_generic.rs  hello_if.rs  hello_io.rs  hello_mod.rs  hello_mut.rs  hello_scope.rs  hello_slice.rs  hello_string.rs  hello_struct.rs  hello_trait.rs  hello_world.rs
stdlib/: Cargo.toml
stdlib/src/: main.rs  rust2018.rs
stdlib/src/primitive_types/: array.rs
stdlib/src/rust2018/: demo.rs
stdlib/tests/: test_demo.rs
webassembly/cargo-web/test-webapp/: Cargo.toml  README.md
webassembly/cargo-web/test-webapp/src/: main.rs
webassembly/cargo-web/test-webapp/src/data/: billable_item.rs  board_dimensions.rs  invoice.rs  lumber_types.rs  mod.rs
webassembly/cargo-web/test-webapp/src/web/: mod.rs  new_invoice.rs  root.rs
webassembly/cargo-web/test-webapp/static/: index.html  styles.css
