[package]
name = "cratelib"
version = "0.1.0"
authors = ["kingreatwill <350840291@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
color-eyre = "0.5"
chrono = "0.4"
comrak = "0.8"
envy = "0.4"
glob = "0.3"
hyper = "0.13"
kankyo = "0.3"
lazy_static = "1.4"
log = "0.4"
mime = "0.3.0"
pretty_env_logger = "0"
prometheus = { version = "0.10", default-features = false, features = ["process"] }
rand = "0"
serde_dhall = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
sitemap = "0.4"
thiserror = "1"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
xml-rs = "0.8"
url = "2"

[build-dependencies]
ructe = { version = "0.12", features = ["warp02"] }

[dev-dependencies]
pfacts = "0"
serde_json = "1"
eyre = "0.6"
reqwest = { version = "0.10", features = ["json"] }